fixed some gaps on imageboard

--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@ a:hover {
 #insert-here {
     max-width: 830px;
     display: grid;
-    gap: 10px;
+    gap: 6px;
     grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
     grid-template-rows: masonry;
     
@@ -158,6 +158,7 @@ a:hover {
     z-index: 11;
     width: 100%;
     padding: 0px;
+    margin: -3px 0px;
     
     position: relative;
     border-radius: 4px;
